--- a/sass/source/sass/blocks/slider.scss
+++ b/sass/source/sass/blocks/slider.scss
@@ -15,6 +15,7 @@
   &__button--prev, &__button--next {
     background-color: transparent;
     border: none;
+    cursor: pointer;
   }
 
   &__slide {
